...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MaraudersMap" translatesAutoresizingMaskIntoConstraints="NO" id="Fgl-rr-99K">
                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="Password" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vGW-0u-tU2">
                                <rect key="frame" x="25" y="562" width="325" height="30"/>
                                <color key="backgroundColor" red="0.85583475428789402" green="0.68248174104559167" blue="0.50613956640056745" alpha="0.69640946061643838" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="1ov-TF-jkZ"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Enter" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATJ-OD-dS3">
                                <rect key="frame" x="171.5" y="600" width="32" height="27"/>
                                <color key="backgroundColor" red="0.8558347543" green="0.68248174100000003" blue="0.50613956640000002" alpha="0.69640946059999997" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                <state key="normal" title="Enter">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
