...
                            <constraint firstItem="3QP-yu-sMn" firstAttribute="leading" secondItem="OuF-yT-Vjq" secondAttribute="leadingMargin" id="iRt-p3-fCB"/>
                            <constraint firstItem="AEY-BN-d0U" firstAttribute="trailing" secondItem="OuF-yT-Vjq" secondAttribute="trailingMargin" id="tOx-em-Y0Y"/>
                            <constraint firstItem="3QP-yu-sMn" firstAttribute="top" secondItem="hHn-9A-hEz" secondAttribute="bottom" id="uvg-k9-a7k"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="SVX-9p-kMz">
                        <barButtonItem key="leftBarButtonItem" title="menu" image="menu" style="plain" id="6AQ-mi-ABK">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="gradientView" destination="OuF-yT-Vjq" id="WDr-a0-Wjq"/>
                        <outlet property="leftSideMenu" destination="6AQ-mi-ABK" id="8Sw-Nj-ATF"/>
...
            <objects>
                <viewController storyboardIdentifier="SideMenuViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hRa-tH-n2c" customClass="SideMenuViewController" customModule="HPKnowledge" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="rjb-nf-wVv">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="SideMenuTable" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="O18-q5-eoq">
                                <rect key="frame" x="0.0" y="64" width="375" height="123"/>
                                <color key="backgroundColor" red="0.96927217509999997" green="0.96927217509999997" blue="0.96927217509999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SideMenuTableViewCell" rowHeight="45" id="Vwo-lB-GYW" customClass="SideMenuTableViewCell" customModule="HPKnowledge" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="375" height="45"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
