...
    
    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    private func setup() {
        backButton.accessibilityIdentifier = "Voltar"
        genericTableView.accessibilityIdentifier = "GenericTable"
        bindTableView()
        genericTableView.register(UINib(nibName: "TableViewCell", bundle: nil), forCellReuseIdentifier: "TableViewCell")
        bindViewModels()
        bindButton()
        genericTableView.rowHeight = 65
    }
...
