...
    
    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    private func setup() {
        closeButton.accessibilityIdentifier = "FecharCharacterInfo"
        modalView.layer.cornerRadius = 20
        modalView.layer.borderColor = UIColor.lightGray.cgColor
        view.backgroundColor = UIColor.black.withAlphaComponent(0.8)
        
    }
    
...
